--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: go
 go: tip
 
 install: 
-  - go get -u github.com/julienschmidt/httprouter
-  - go get -u github.com/boltdb/bolt
+  - go get github.com/boltdb/bolt
+  - go get github.com/juju/errors
+  - go get github.com/julienschmidt/httprouter
+  - go get github.com/segmentio/go-log
+  - go get gopkg.in/check.v1
 
 script:
   - go test -v ./...
