Fix travis imports, tag v0.1.0
.travis.yml now includes readline and juju/testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
 - go get github.com/juju/errors
 - go get github.com/julienschmidt/httprouter
 - go get gopkg.in/check.v1
+- go get gopkg.in/readline.v1
+- go get github.com/juju/testing
 script:
 - go test -v ./...
 notifications:
