--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: go
 go: tip
 install:
 - go get github.com/tools/godep
+- go get github.com/juju/testing/checkers
+- go get gopkg.in/check.v1
 script:
 - godep go test -v ./...
 notifications:
